fix: load and save task method fixed